use CMAKE_INSTALL_PREFIX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,11 +53,11 @@ target_link_libraries(${PROJECT_NAME} ${SFML_SYSTEM_LIBRARY})
 target_link_libraries(${PROJECT_NAME} ${SFML_NETWORK_LIBRARY})
 
 if(UNIX)
-	install(TARGETS SSVBloodshed RUNTIME DESTINATION /usr/local/games/SSVBloodshed/)
+	install(TARGETS SSVBloodshed RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/games/SSVBloodshed/)
 	install(TARGETS SSVBloodshed RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/_RELEASE/)
-	install(DIRECTORY _RELEASE/ DESTINATION /usr/local/games/SSVBloodshed/)
+	install(DIRECTORY _RELEASE/ DESTINATION ${CMAKE_INSTALL_PREFIX}/games/SSVBloodshed/)
 	install(PROGRAMS _RELEASE/SSVBloodshed DESTINATION /usr/local/bin/ PERMISSIONS WORLD_EXECUTE WORLD_READ)
-	install(PROGRAMS _RELEASE/SSVBloodshed DESTINATION /usr/local/games/SSVBloodshed/ PERMISSIONS WORLD_EXECUTE WORLD_READ)
+	install(PROGRAMS _RELEASE/SSVBloodshed DESTINATION ${CMAKE_INSTALL_PREFIX}/games/SSVBloodshed/ PERMISSIONS WORLD_EXECUTE WORLD_READ)
 else(WIN32)
 	install(TARGETS SSVBloodshed RUNTIME DESTINATION ./_RELEASE/)
 endif()
