--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,9 +55,8 @@ target_link_libraries(${PROJECT_NAME} ${SFML_NETWORK_LIBRARY})
 if(UNIX)
 	install(TARGETS SSVBloodshed RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/games/SSVBloodshed/)
 	install(TARGETS SSVBloodshed RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/_RELEASE/)
-	install(DIRECTORY _RELEASE/ DESTINATION ${CMAKE_INSTALL_PREFIX}/games/SSVBloodshed/)
-	install(PROGRAMS _RELEASE/SSVBloodshed DESTINATION /usr/local/bin/ PERMISSIONS WORLD_EXECUTE WORLD_READ)
-	install(PROGRAMS _RELEASE/SSVBloodshed DESTINATION ${CMAKE_INSTALL_PREFIX}/games/SSVBloodshed/ PERMISSIONS WORLD_EXECUTE WORLD_READ)
+	install(DIRECTORY ${CMAKE_SOURCE_DIR}/_RELEASE/ DESTINATION ${CMAKE_INSTALL_PREFIX}/games/SSVBloodshed/)
+	install(PROGRAMS ${CMAKE_SOURCE_DIR}/_RELEASE/SSVBloodshed DESTINATION ${CMAKE_INSTALL_PREFIX}/games/SSVBloodshed/ PERMISSIONS WORLD_EXECUTE WORLD_READ)
 else(WIN32)
-	install(TARGETS SSVBloodshed RUNTIME DESTINATION ./_RELEASE/)
+	install(TARGETS SSVBloodshed RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/_RELEASE/)
 endif()
